Update HW2 Sea Level Rise.ipynb

--- a/HW2 Sea Level Rise.ipynb
+++ b/HW2 Sea Level Rise.ipynb
@@ -585,7 +585,7 @@
     "\n",
     "How do the timeseries for Calfiornia and the global mean compare? Comment on their variability. What are the two highest years of sea level in California? What oceanographic phenomenon happened during this time?\n",
     "\n",
-    "Answer: The SJ, CA timeseries is much more variable than the global mean. The two highest years of SLR for California were in 1997 and 2015, both strong El Niño events."
+    "Answer: The SJ, CA timeseries is much more variable than the global mean. The two highest years of sea level for California were in 1997 and 2015, both strong El Niño events."
    ]
   },
   {
